samples/trafficgenerator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trafficgenerator
  name: trafficgenerator
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: trafficgenerator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: trafficgenerator
    spec:
      containers:
      - args:
        - /bin/sh
        - -c
        - \"while true; do curl $DEPLOYMENT_NAME-bookinfo.$DNS_DOMAIN/productpage; sleep 10; done\"
        image: appropriate/curl
        imagePullPolicy: Always
        name: trafficgenerator
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
