samples/tsb-envoy-secret-watcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsb-envoy-secret-watcher
  namespace: tsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsb-envoy-secret-watcher
  template:
    metadata:
      labels:
        app: tsb-envoy-secret-watcher
    spec:
      serviceAccountName: tsb-envoy-secret-watcher
      volumes:
      - name: script
        configMap:
          name: tsb-envoy-secret-watcher-script
      containers:
      - name: tsb-envoy-secret-watcher
        image: bitnami/kubectl
        volumeMounts:
        - name: script
          mountPath: /scripts
        command: ["/bin/bash"]
        args: ["/scripts/tsb-envoy-secret-watcher.sh"]
