samples/vs-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo-direct
  annotations:
    tsb.tetrate.io/trafficGroup: bookinfo-direct-traffic-group
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/tenant: dev
    tsb.tetrate.io/workspace: proxy-direct-workspace
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        reviews:
          exact: v2
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
